--- a/U4T8Database/app_activ3/src/main/res/values/strings.xml
+++ b/U4T8Database/app_activ3/src/main/res/values/strings.xml
@@ -13,5 +13,6 @@
     <string name="next">Next</string>
     <string name="previous">Previous</string>
     <string name="Priority">Priority:</string>
+    <string name="Not_Started">Not Started</string>
 
 </resources>
